SOCKS5 user authentication broken
In /src/network/tcp.c, SocksNegotiate(), it says:
if( ( psz_socks_user == NULL ) && ( psz_socks_passwd == NULL ) )
b_auth = true;
This does not make any sense. It has to check for != NULL instead.
In /src/network/tcp.c, SocksNegotiate(), it says:
if( ( psz_socks_user == NULL ) && ( psz_socks_passwd == NULL ) )
b_auth = true;
This does not make any sense. It has to check for != NULL instead.
added Status::fixed label
changed milestone to %2.2.x maintenance branch
closed
commit dcfe8660 Author: Rémi Denis-Courmont remi@remlab.net Date: Sat Dec 28 13:03:53 2013 +0200
SOCKSv5: fix inverted logic (fixes [#10247](https://code.videolan.org/videolan/vlc/-/issues/10247))
Original author: remi@remlab.net
changed milestone to %2.1.3
VideoLAN code repository instance