SOCKSv5: fix inverted logic (fixes #10247)